[package]
name = "lambda_server_adapter"
version = "0.0.1"
authors = []
edition = "2021"
description = "Run web servers inside AWS Lambda"

[dependencies]
envy = "0.4.2"
http = "0.2"
hyper = { version = "0.14", features = ["client"] }
lambda_http = "0.8.3"
reqwest = { version = "0.11.22", features = [
    "blocking",
    "json",
], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
    "time",
] }
tokio-retry = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
url = "2.3"

[[bin]]
name = "lambda-adapter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
